--- a/http/ssl/README
+++ b/http/ssl/README
@@ -5,10 +5,11 @@
 # 1. configure CA
 
 export cnf=/usr/lib/ssl/openssl.cnf
-export ca_loc=/home/lively/lively-web.org/http/ssl/myCA
+export ca_loc=/home/lively/lively-web.org/http/ssl/lively-web-CA
 
 mkdir -p $ca_loc/certs
 mkdir $ca_loc/csr
+mkdir $ca_loc/crl
 mkdir $ca_loc/newcerts
 mkdir $ca_loc/private
 cp $cnf $ca_loc/.
@@ -56,19 +57,66 @@ openssl ca -batch -config openssl.cnf -days 999 -in csr/$servername.csr -out cer
 # -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 
 # 4. Create a SSL Client certificate
+
+# C                      = {Country}
+# ST                     = {Provice/State}
+# L                      = {City}
+# O                      = {Org}
+# OU                     = {Org Unit}
+# CN                     = user@domain.com
+# emailAddress           = user@domain.com
+
 # Create private key for a client
-openssl genrsa -des3 -passout pass:$password -out private/client.key 2048
+ca_loc=/home/lively/lively-web.org/http/ssl/lively-web-CA
+username="robertkrahn"
+email="robert.krahn@gmail.com"
+client_password="tebor1"
+
+cd $ca_loc;
+
+openssl genrsa -des3 \
+    -passout pass:"$client_password" \
+    -out "private/client_$username.key" 2048
  
 # Remove passphrase 
-openssl rsa -passin pass:$password -in private/client.key -out private/client.key
+openssl rsa \
+    -passin pass:"$client_password" \
+    -in "private/client_$username.key" \
+    -out private/client_$username.key
  
 # Create CSR for the client.
-openssl req -config openssl.cnf -new -subj '/C=US/L=SanFrancisco/O=livelyweb-internal/CN=client-robert' -key private/client.key -out csr/client.csr
- 
+openssl req -config openssl.cnf -new \
+    -subj "/C=US/L=San Francisco/O=livelyweb-internal/CN=$username/emailAddress=$email" \
+    -key "private/client_$username.key" \
+    -out "csr/client_$username.csr"
+
 # Create client certificate.
-openssl ca -batch -config openssl.cnf -days 999 -in csr/client.csr -out certs/client.crt -keyfile private/rootCA.key -cert certs/rootCA.crt -policy policy_anything
+openssl ca -batch -config openssl.cnf \
+    -days 365 \
+    -in "csr/client_$username.csr" \
+    -out "certs/client_$username.crt" \
+    -keyfile private/rootCA.key -cert certs/rootCA.crt -policy policy_anything
 
 # -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 # 5. Export the client certificate to pkcs12
-openssl pkcs12 -export -passout pass:$password -in certs/client.crt -inkey private/client.key -certfile certs/rootCA.crt -out certs/clientcert.p12
+openssl pkcs12 -export \
+    -passout pass:"$client_password" \
+    -in "certs/client_$username.crt" \
+    -inkey "private/client_$username.key" -certfile certs/rootCA.crt \
+    -out "certs/client_$username.p12"
 
+
+# -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
+# Revoke
+
+username="robertkrahn"
+grep "^V.*CN=$username/" index.txt \
+    | awk '{ print $3 }' \
+    | xargs -i openssl ca -config openssl.cnf \
+        -keyfile private/rootCA.key -cert certs/rootCA.crt -policy policy_anything \
+        -revoke newcerts/"{}.pem"
+
+openssl ca -gencrl \
+    -config openssl.cnf \
+    -keyfile private/rootCA.key -cert certs/rootCA.crt -policy policy_anything \
+    -out crl/crl-ca.crl
